Recommit gh-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://tjrelyts.github.io/personal-portfolio/",
+  "homepage": "https://tjrelyts.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
