--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "personal-portfolio",
-  "homepage": "https://tjrelyts.github.io/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
