--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "personal-portfolio",
+  "homepage": "https://tjrelyts.github.io/personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
